# advent

advent23/: CHANGELOG.md  LICENSE  README.md  advent23.cabal  hie.yaml
advent23/src/: day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day06.k  day07.hs  day08.hs  day09.hs  day10.hs  day10.rs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  template.hs
